Bug 629172 - Fix the regression in switching the text input direction using Cmd/Ctrl+Shift+X; r=roc a=blocking-final+